--- a/public/post.html
+++ b/public/post.html
@@ -9,10 +9,11 @@
 		<h1 class="text-3xl font-bold text-gr ay-800 mb-4 text-center">
 			Kimple blog
 		</h1>
-		<div id="posts" class="space-y-4"></div>
+		<div id="detailed-post" class="space-y-4"></div>
 
 		<footer></footer>
 		<script src="script.js"></script>
+		<script src="post.js"></script>
 	</body>
 	<script src="https://cdn.tailwindcss.com"></script>
 </html>
