feat: Implement admin panel for managing blog posts

--- a/public/post.html
+++ b/public/post.html
@@ -7,13 +7,13 @@
 		<header></header>
 
 		<h1 class="text-3xl font-bold text-gr ay-800 mb-4 text-center">
-			Kimple blog
+			<a href="index.html"> Kimple blog </a>
 		</h1>
 		<div id="detailed-post" class="space-y-4"></div>
 
 		<footer></footer>
+		<script src="https://cdn.tailwindcss.com"></script>
 		<script src="script.js"></script>
 		<script src="post.js"></script>
 	</body>
-	<script src="https://cdn.tailwindcss.com"></script>
 </html>
