--- a/public/index.html
+++ b/public/index.html
@@ -7,12 +7,12 @@
 		<header></header>
 
 		<h1 class="text-3xl font-bold text-gr ay-800 mb-4 text-center">
-			Kimple blog
+			<a href="index.html"> Kimple blog </a>
 		</h1>
 		<div id="posts" class="space-y-4"></div>
 
 		<footer></footer>
+		<script src="https://cdn.tailwindcss.com"></script>
 		<script src="script.js"></script>
 	</body>
-	<script src="https://cdn.tailwindcss.com"></script>
 </html>
