--- a/public/index.html
+++ b/public/index.html
@@ -3,15 +3,37 @@
 	<head>
 		<title>Kimple</title>
 	</head>
-	<body class="bg-gray-100 p-6">
-		<header></header>
+	<body class="bg-gray-100 p-4">
+		<header class="bg-white relative round my-2">
+			<div class="max-w-7xl mx-auto px-4 py-4 relative">
+				<div class="flex items-center justify-between">
+					<div class="w-1/3"></div>
 
-		<h1 class="text-3xl font-bold text-gr ay-800 mb-4 text-center">
-			<a href="index.html"> Kimple blog </a>
-		</h1>
-		<div id="posts" class="space-y-4"></div>
+					<div
+						class="w-1/3 text-center absolute left-1/2 transform -translate-x-1/2"
+					>
+						<h1 class="text-2xl font-bold text-gray-800">
+							<a href="index.html">Kimple Blog</a>
+						</h1>
+					</div>
+
+					<div class="w-1/3 text-right">
+						<a
+							href="login.html"
+							class="text-gray-600 hover:text-blue-600"
+							>Log in</a
+						>
+					</div>
+				</div>
+			</div>
+		</header>
+
+		<div class="mx-auto bg-white p-6 rounded border">
+			<div id="posts" class="space-y-4"></div>
+		</div>
 
 		<footer></footer>
+
 		<script src="https://cdn.tailwindcss.com"></script>
 		<script src="script.js"></script>
 	</body>
