--- a/public/admin.html
+++ b/public/admin.html
@@ -3,12 +3,58 @@
 	<head>
 		<title>Kimple's admin</title>
 	</head>
-	<body class="bg-gray-100 p-6">
-		<header></header>
-		<div class="max-w-2xl mx-auto bg-white p-6 rounded shadow">
-			<h1 class="text-3xl font-bold text-gray-800 mb-4 text-center">
-				Kimple's Admin
-			</h1>
+	<body class="bg-gray-100 p-4">
+		<header class="bg-white relative round my-2">
+			<div class="max-w-7xl mx-auto px-4 py-4 relative">
+				<div class="flex items-center justify-between">
+					<div class="w-1/3"></div>
+
+					<div class="w-1/3 text-center">
+						<h1 class="text-2xl font-bold text-gray-800">
+							<a href="index.html">Kimple's Admin</a>
+						</h1>
+					</div>
+
+					<div class="w-1/3 text-right">
+						<a
+							href="login.html"
+							class="text-gray-600 hover:text-blue-600"
+						>
+						</a>
+					</div>
+				</div>
+			</div>
+		</header>
+
+		<div class="max-w-8xl mx-auto bg-white p-6 rounded shadow">
+			<div class="flex items-center jujstify-between gap-4">
+				<input
+					type="text"
+					id="searchInput"
+					placeholder="Search posts..."
+					class="flex-1 border border-gray-300 rounded p-2 focus:outline-none focus:ring-2 focus:ring-blue-400"
+				/>
+				<button
+					id="addButton"
+					class="bg-gray-600 text-white px-4 py-2 rounded hover:bg-blue-700 flex items-center justify-center"
+					aria-label="Add New Post"
+				>
+					<svg
+						xmlns="http://www.w3.org/2000/svg"
+						class="h-6 w-6"
+						fill="none"
+						viewBox="0 0 24 24"
+						stroke="currentColor"
+					>
+						<path
+							stroke-linecap="round"
+							stroke-linejoin="round"
+							stroke-width="2"
+							d="M12 4v16m8-8H4"
+						/>
+					</svg>
+				</button>
+			</div>
 			<form id="postForm" class="space-y-4">
 				<input type="hidden" id="postId" />
 				<div>
