--- a/public/index.html
+++ b/public/index.html
@@ -9,9 +9,7 @@
 				<div class="flex items-center justify-between">
 					<div class="w-1/3"></div>
 
-					<div
-						class="w-1/3 text-center absolute left-1/2 transform -translate-x-1/2"
-					>
+					<div class="w-1/3 text-center">
 						<h1 class="text-2xl font-bold text-gray-800">
 							<a href="index.html">Kimple Blog</a>
 						</h1>
