--- a/public/post.html
+++ b/public/post.html
@@ -4,11 +4,28 @@
 		<title>Kimple</title>
 	</head>
 	<body class="bg-gray-100 p-6">
-		<header></header>
+		<header class="max-w-8xl mx-auto bg-white relative round my-2">
+			<div class="px-4 py-4 relative">
+				<div class="flex items-center justify-between">
+					<div class="w-1/3"></div>
 
-		<h1 class="text-3xl font-bold text-gr ay-800 mb-4 text-center">
-			<a href="index.html"> Kimple blog </a>
-		</h1>
+					<div class="w-1/3 text-center">
+						<h1 class="text-2xl font-bold text-gray-800">
+							<a href="index.html">Kimple Blog</a>
+						</h1>
+					</div>
+
+					<div class="w-1/3 text-right">
+						<a
+							href="login.html"
+							class="text-gray-600 hover:text-blue-600"
+							>Log in</a
+						>
+					</div>
+				</div>
+			</div>
+		</header>
+		
 		<div id="detailed-post" class="space-y-4"></div>
 
 		<footer></footer>
