--- a/public/admin.html
+++ b/public/admin.html
@@ -14,13 +14,13 @@
 							<a href="index.html">Kimple's Admin</a>
 						</h1>
 					</div>
-
 					<div class="w-1/3 text-right">
-						<a
-							href="login.html"
-							class="text-gray-600 hover:text-blue-600"
+						<button
+							onclick="logout()"
+							class="text-red-500 hover:text-red-700"
 						>
-						</a>
+							Logout
+						</button>
 					</div>
 				</div>
 			</div>
