--- a/public/login.html
+++ b/public/login.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
-	<body class="bg-gray-100 p-6">
-		<div class="max-w-2xl mx-auto bg-white p-6 rounded shadow">
-			<h1 class="text-3xl font-bold text-gray-800 mb-4 text-center">
+	<body class="min-h-screen flex items-center justify-center bg-gray-100">
+		<div class="w-full max-w-xl mx-auto bg-white p-6 rounded-2xl shadow">
+			<h1 class="text-2xl font-bold text-gray-800 mb-4 text-center">
 				Kimple's Login
 			</h1>
-			<form id="loginForm" class="space-y-4">		
+			<form id="loginForm" class="space-y-4">
 				<div>
 					<label for="username" class="block font-semibold"
 						>Username</label
@@ -13,7 +13,7 @@
 					<input
 						type="text"
 						id="username"
-						class="w-full border rounded"
+						class="w-full border rounded px-3 py-2"
 						required
 					/>
 				</div>
@@ -22,14 +22,14 @@
 					<input
 						type="password"
 						id="password"
-						class="w-full border rounded"
+						class="w-full border rounded px-3 py-2"
 						required
 					/>
 				</div>
 				<div class="text-center">
 					<button
 						type="submit"
-						class="text-gray-900 px-4 py-2 border rounded"
+						class="bg-blue-600 text-white font-semibold px-6 py-2 rounded-lg shadow hover:bg-blue-700 hover:shadow-md transition duration-200"
 					>
 						Log in
 					</button>
