--- a/public/admin.html
+++ b/public/admin.html
@@ -5,7 +5,7 @@
 	</head>
 	<body class="bg-gray-100 p-4">
 		<header class="bg-white relative round my-2">
-			<div class="max-w-7xl mx-auto px-4 py-4 relative">
+			<div class="max-w-8xl mx-auto px-4 py-4 relative">
 				<div class="flex items-center justify-between">
 					<div class="w-1/3"></div>
 
@@ -85,6 +85,16 @@
 						class="w-full border p-2 rounded"
 						required
 					></textarea>
+				</div>
+				<div>
+					<label for="image" class="block font-semibold"
+						>Image URL</label
+					>
+					<input
+						type="url"
+						id="image"
+						class="w-full border p-2 rounded"
+					/>
 				</div>
 				<button
 					type="submit"
